# case100

./: Cargo.toml  err  main.mif  rustc-ice-2025-04-17T20_58_07-665842.txt  rustc-ice-2025-04-17T20_58_07-665843.txt  test.e  test.labels  test.mif
src/: core.rs  devices.rs  executor.rs  main.rs  memtable.rs  package.rs  sdlcore.rs
src/devices/: kbd.rs  onboard.rs  vga.rs
