[package]
name = "case100"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.2.0"
itertools = "0.14.0"
log = "0.4.27"
rat-ftable = "1.0.0"
ratatui = "0.29.0"
ratatui-explorer = "0.1.4"
regex = "1.11.1"
sdl3 = "0.14.24"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "fs", "net", "sync", "rt", "io-util", "full"] }
tokio-macros = "2.5.0"
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tui-input = "0.11.1"
